--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,10 @@ body {
 .container {
   display: flex;
   align-items: center;
-  width: 1280px;
+  justify-content: center;
+  max-width: 1200px;
   padding: 0 32px;
+  margin: 0 auto;
 }
 
 .container.container--no-padding {
@@ -105,6 +107,7 @@ body {
 .page-header {
   position: fixed;
   z-index: 100;
+  width: 100%;
   background-color: rgba(35, 21, 60, 0.9);
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
@@ -137,6 +140,27 @@ body {
 
 .site-contacts {
   color: #FFFFFF;
+  margin-left: auto;
+}
+
+.site-contacts__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.site-contacts__item:not(:last-child) {
+  margin: 7px;
+}
+
+.site-contacts__icon {
+  fill: #FFFFFF;
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.site-contacts__icon:hover {
+  fill: #FF3F81;
 }
 
 .intro {
@@ -171,13 +195,16 @@ body {
 }
 
 .hero__text-acent {
+  display: inline-flex;
   font-family: monospace;
-  width: 100px;
+  width: 22ch;
   color: #FF3F81;
   font-weight: 900;
   font-size: 22px;
   border-right: 3px solid #FFFFFF;
-  animation: flashing-border 0.75s step-start infinite, printed-text 5s steps(20);
+  white-space: nowrap;
+  overflow: hidden;
+  animation: flashing-border 0.5s step-start infinite, printed-text-start 2.5s steps(21) 1;
 }
 
 @keyframes flashing-border {
@@ -192,12 +219,9 @@ body {
   }
 }
 
-@keyframes printed-text {
-  0% {
+@keyframes printed-text-start {
+  from {
     width: 0;
-  }
-  100% {
-    width: 100px;
   }
 }
 /*# sourceMappingURL=main.css.map */
