--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,7 @@
 .page-header {
     position: fixed;
     z-index: 100;
+    width: 100%;
     background-color: $color-dark-transparent;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
@@ -36,4 +37,27 @@
 
 .site-contacts {
     color: $color-white;
+    margin-left: auto;
+
+
+&__list {
+    display: flex;
+    // flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+&__item:not(:last-child) {
+    margin: 7px;
+}
+
+&__icon {
+    fill: $color-white;
+    cursor: pointer;
+    transition: $timing-function;
+
+    &:hover {
+        fill: $color-pink;
+    }
+}
 }
