--- a/sass/units/_vars.scss
+++ b/sass/units/_vars.scss
@@ -91,8 +91,10 @@ body {
 .container {
     display: flex;
     align-items: center;
-    width: 1280px;
+    justify-content: center;
+    max-width: 1200px;
     padding: 0 32px;
+    margin: 0 auto;
 
 }
 
