--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,63 +1,69 @@
 .page-header {
-    position: fixed;
-    z-index: 100;
-    width: 100%;
-    background-color: $color-dark-transparent;
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  background-color: $color-dark-transparent;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .logo {
-    // font-family: $font-title;
-    color: $color-white;
-    font-size: 38px;
-    padding: 36px 0;
-    margin-right: 55px;
+  // font-family: $font-title;
+  color: $color-white;
+  font-size: 38px;
+  padding: 36px 0;
+  margin-right: 55px;
 
-    &__acent {
-        color: $color-pink;
-    }
+  &__acent {
+    color: $color-pink;
+  }
 }
 
 .site-nav__list {
+  display: none;
+
+  @media screen and (min-width: $tablet) {
     display: flex;
+  }
 }
 
 .site-nav__item {
-    margin-right: 25px;
-    transition: $timing-function;
-    color: $color-white;
+  margin-right: 25px;
+  transition: $timing-function;
+  color: $color-white;
 
-    &:hover {
-        color: $color-pink;
-        cursor: pointer;
+  &:hover,
+  &:focus {
+    color: $color-pink;
+    cursor: pointer;
+  }
+}
 
-    }
+.site-nav__link {
+  color: inherit;
 }
 
 .site-contacts {
-    color: $color-white;
-    margin-left: auto;
+  color: $color-white;
+  margin-left: auto;
 
-
-&__list {
+  &__list {
     display: flex;
     // flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-}
+  }
 
-&__item:not(:last-child) {
+  &__item:not(:last-child) {
     margin: 7px;
-}
+  }
 
-&__icon {
+  &__icon {
     fill: $color-white;
     cursor: pointer;
     transition: $timing-function;
 
     &:hover {
-        fill: $color-pink;
+      fill: $color-pink;
     }
-}
+  }
 }
