--- a/sass/units/_vars.scss
+++ b/sass/units/_vars.scss
@@ -10,9 +10,15 @@ $timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 //  Font
 $font-primery: 'DM Sans', sans-serif;
-$font-title: 'Titan One', cursive;
+// $font-title: 'Titan One', cursive;
 
 // Break points
+$mobile: 380px;
+$to-tablet:787px;
+$tablet: 768px;
+$to-desctop: 1279px;
+$desctop: 1280px;
+
 
 // Base style
 html {
@@ -76,7 +82,6 @@ a {
 
 body {
     color: $color-dark;
-    // background-color: ;
     font-family: $font-primery;
     font-weight: 500;
     font-size: 16px;
@@ -92,14 +97,18 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    max-width: 1200px;
-    padding: 0 32px;
+    min-width: $mobile;
+    padding: 0 12px;
     margin: 0 auto;
 
-}
+    @media screen and (min-width: $tablet) {
+        max-width: $tablet;
+    }
 
-.container.container--no-padding {
-    padding: 0;
+    @media screen and (min-width: $desctop) {
+        max-width: $desctop;
+        padding: 0 32px;
+    }
 }
 
 .btn {
