--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './units/vars';
 @import './components/header';
 @import './components/hero';
-@import './components/aboutMe'
+@import './components/aboutMe';
+@import './components/stady';
