--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -312,86 +311,86 @@ body {
 }
 
 .stady__box {
-  width: 100%;
-  margin-top: 44px;
-  margin-bottom: 44px;
+  position: relative;
+  width: 210px;
+  height: 140px;
+  margin: 50px auto;
+  perspective: 1000px;
 }
 
 .stady__carousel {
-  position: relative;
-  top: 0;
-  left: 320px;
+  position: absolute;
   width: 100%;
-  height: 100px;
-  margin: 0 auto;
+  height: 100%;
+  transform-style: preserve-3d;
 }
 
 .stady__card {
   position: absolute;
+  top: 20px;
+  left: 10px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 190px;
+  height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 90px;
-  height: 100px;
-  color: #FFFFFF;
-  border-radius: 8px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
-  text-align: center;
-  animation: effectСarousel 8s linear infinite;
 }
 
-@keyframes effectСarousel {
+.stady__card:nth-child(1) {
+  background-image: url("../../images/stady-img/img_html.png");
+  transform: rotateY(0deg) translateZ(288px);
+}
+
+.stady__card:nth-child(2) {
+  background-image: url("../../images/stady-img/img_css.png");
+  transform: rotateY(40deg) translateZ(288px);
+}
+
+.stady__card:nth-child(3) {
+  background-image: url("../../images/stady-img/img_js.png");
+  transform: rotateY(80deg) translateZ(288px);
+}
+
+.stady__card:nth-child(4) {
+  background-image: url("../../images/stady-img/img_npm.png");
+  transform: rotateY(120deg) translateZ(288px);
+}
+
+.stady__card:nth-child(5) {
+  background-image: url("../../images/stady-img/img_react.png");
+  transform: rotateY(160deg) translateZ(288px);
+}
+
+.stady__card:nth-child(6) {
+  background-image: url("../../images/stady-img/img_nodejs.png");
+  transform: rotateY(200deg) translateZ(288px);
+}
+
+.stady__card:nth-child(7) {
+  background-image: url("../../images/stady-img/img_mongoDB.png");
+  transform: rotateY(240deg) translateZ(288px);
+}
+
+.stady__card:nth-child(8) {
+  background-image: url("../../images/stady-img/img_github.png");
+  transform: rotateY(280deg) translateZ(288px);
+}
+
+.stady__card:nth-child(9) {
+  background-image: url("../../images/stady-img/mg_sass.png");
+  transform: rotateY(320deg) translateZ(288px);
+}
+
+@keyframes rotate360 {
   from {
-    transform: rotateY(0deg) translateZ(180px) rotateY(0deg);
-    z-index: 10;
-    opacity: 1;
-  }
-  50% {
-    z-index: -10;
+    transform: rotate(0deg);
   }
   to {
-    transform: rotateY(360deg) translateZ(180px) rotateY(-360deg);
-    z-index: 10;
-    opacity: 1;
+    transform: rotate(-360deg);
   }
-}
-
-.stady__card.stady__card--1 {
-  background-color: red;
-  animation-delay: -7s;
-}
-
-.stady__card.stady__card--2 {
-  background-color: #FC00FF;
-  animation-delay: -6s;
-}
-
-.stady__card.stady__card--3 {
-  background-color: #0093E9;
-  animation-delay: -5s;
-}
-
-.stady__card.stady__card--4 {
-  background-color: #80D0C7;
-  animation-delay: -4s;
-}
-
-.stady__card.stady__card--5 {
-  background-color: grey;
-  animation-delay: -3s;
-}
-
-.stady__card.stady__card--6 {
-  background-color: yellow;
-  animation-delay: -2s;
-}
-
-.stady__card.stady__card--7 {
-  background-color: orange;
-  animation-delay: -1s;
-}
-
-.stady__card.stady__card--8 {
-  background: olive;
 }
 /*# sourceMappingURL=main.css.map */
