--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -338,51 +339,61 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: effectСarousel 45s linear infinite;
 }
 
 .stady__card:nth-child(1) {
   background-image: url("../../images/stady-img/img_html.png");
   transform: rotateY(0deg) translateZ(288px);
+  animation-delay: -45s;
 }
 
 .stady__card:nth-child(2) {
   background-image: url("../../images/stady-img/img_css.png");
   transform: rotateY(40deg) translateZ(288px);
+  animation-delay: -40s;
 }
 
 .stady__card:nth-child(3) {
   background-image: url("../../images/stady-img/img_js.png");
   transform: rotateY(80deg) translateZ(288px);
+  animation-delay: -35s;
 }
 
 .stady__card:nth-child(4) {
   background-image: url("../../images/stady-img/img_npm.png");
   transform: rotateY(120deg) translateZ(288px);
+  animation-delay: -30s;
 }
 
 .stady__card:nth-child(5) {
   background-image: url("../../images/stady-img/img_react.png");
   transform: rotateY(160deg) translateZ(288px);
+  animation-delay: -25s;
 }
 
 .stady__card:nth-child(6) {
   background-image: url("../../images/stady-img/img_nodejs.png");
   transform: rotateY(200deg) translateZ(288px);
+  animation-delay: -20s;
 }
 
 .stady__card:nth-child(7) {
   background-image: url("../../images/stady-img/img_mongoDB.png");
   transform: rotateY(240deg) translateZ(288px);
+  animation-delay: -15s;
 }
 
 .stady__card:nth-child(8) {
   background-image: url("../../images/stady-img/img_github.png");
   transform: rotateY(280deg) translateZ(288px);
+  animation-delay: -10s;
 }
 
 .stady__card:nth-child(9) {
   background-image: url("../../images/stady-img/mg_sass.png");
   transform: rotateY(320deg) translateZ(288px);
+  animation-delay: -5s;
 }
 
 @keyframes rotate360 {
@@ -390,7 +401,23 @@ body {
     transform: rotate(0deg);
   }
   to {
-    transform: rotate(-360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes effectСarousel {
+  from {
+    transform: rotateY(0deg) translateZ(288px) rotateY(0deg);
+    z-index: 10;
+    opacity: 1;
+  }
+  50% {
+    z-index: -10;
+  }
+  to {
+    transform: rotateY(360deg) translateZ(288px) rotateY(-360deg);
+    z-index: 10;
+    opacity: 1;
   }
 }
 /*# sourceMappingURL=main.css.map */
