--- a/css/main.css
+++ b/css/main.css
@@ -330,10 +330,6 @@ body {
   position: absolute;
   top: 20px;
   left: 10px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: rgba(0, 0, 0, 0.3);
   width: 190px;
   height: 120px;
   display: flex;
@@ -343,55 +339,46 @@ body {
 }
 
 .stady__card:nth-child(1) {
-  background-image: url("../../images/stady-img/img_html.png");
   transform: rotateY(0deg) translateZ(288px);
   animation-delay: -45s;
 }
 
 .stady__card:nth-child(2) {
-  background-image: url("../../images/stady-img/img_css.png");
   transform: rotateY(40deg) translateZ(288px);
   animation-delay: -40s;
 }
 
 .stady__card:nth-child(3) {
-  background-image: url("../../images/stady-img/img_js.png");
   transform: rotateY(80deg) translateZ(288px);
   animation-delay: -35s;
 }
 
 .stady__card:nth-child(4) {
-  background-image: url("../../images/stady-img/img_npm.png");
   transform: rotateY(120deg) translateZ(288px);
   animation-delay: -30s;
 }
 
 .stady__card:nth-child(5) {
-  background-image: url("../../images/stady-img/img_react.png");
   transform: rotateY(160deg) translateZ(288px);
   animation-delay: -25s;
 }
 
 .stady__card:nth-child(6) {
-  background-image: url("../../images/stady-img/img_nodejs.png");
   transform: rotateY(200deg) translateZ(288px);
   animation-delay: -20s;
 }
 
 .stady__card:nth-child(7) {
-  background-image: url("../../images/stady-img/img_mongoDB.png");
   transform: rotateY(240deg) translateZ(288px);
   animation-delay: -15s;
 }
 
 .stady__card:nth-child(8) {
-  background-image: url("../../images/stady-img/img_github.png");
   transform: rotateY(280deg) translateZ(288px);
   animation-delay: -10s;
 }
 
 .stady__card:nth-child(9) {
-  background-image: url("../../images/stady-img/mg_sass.png");
   transform: rotateY(320deg) translateZ(288px);
   animation-delay: -5s;
 }
@@ -419,5 +406,9 @@ body {
     z-index: 10;
     opacity: 1;
   }
+}
+
+.stady__img {
+  width: 100px;
 }
 /*# sourceMappingURL=main.css.map */
