--- a/sass/components/_stady.scss
+++ b/sass/components/_stady.scss
@@ -106,10 +106,10 @@ top: 20px;
 left: 10px;
 // right: 10px;
 
-background-size: contain;
-background-repeat: no-repeat;
-background-position: center;
-background-color: rgba(0, 0, 0, .3);
+// background-size: contain;
+// background-repeat: no-repeat;
+// background-position: center;
+// background-color: rgba(0, 0, 0, .3);
 
     width: 190px;
     height: 120px;
@@ -118,52 +118,53 @@ background-color: rgba(0, 0, 0, .3);
     justify-content: center;
     align-items: center;
 
+
             animation: effectСarousel 45s linear infinite;
 
 }
 
 .stady__card:nth-child(1) {
-    background-image: url('../../images/stady-img/img_html.png');
+    // background-image: url('../../images/stady-img/img_html.png');
     transform: rotateY(0deg) translateZ(288px);
     animation-delay: -45s;
 }
 .stady__card:nth-child(2) {
-    background-image: url('../../images/stady-img/img_css.png');
+    // background-image: url('../../images/stady-img/img_css.png');
     transform: rotateY(40deg) translateZ(288px);
     animation-delay: -40s;
 }
 .stady__card:nth-child(3) {
-    background-image: url('../../images/stady-img/img_js.png');
+    // background-image: url('../../images/stady-img/img_js.png');
     transform: rotateY(80deg) translateZ(288px);
     animation-delay: -35s;
 }
 .stady__card:nth-child(4) {
-    background-image: url('../../images/stady-img/img_npm.png');
+    // background-image: url('../../images/stady-img/img_npm.png');
     transform: rotateY(120deg) translateZ(288px);
     animation-delay: -30s;
 }
 .stady__card:nth-child(5) {
-background-image: url('../../images/stady-img/img_react.png');
+// background-image: url('../../images/stady-img/img_react.png');
     transform: rotateY(160deg) translateZ(288px);
     animation-delay: -25s;
 }
 .stady__card:nth-child(6) {
-    background-image: url('../../images/stady-img/img_nodejs.png');
+    // background-image: url('../../images/stady-img/img_nodejs.png');
     transform: rotateY(200deg) translateZ(288px);
     animation-delay: -20s;
 }
 .stady__card:nth-child(7) {
-    background-image: url('../../images/stady-img/img_mongoDB.png');
+    // background-image: url('../../images/stady-img/img_mongoDB.png');
     transform: rotateY(240deg) translateZ(288px);
     animation-delay: -15s;
 }
 .stady__card:nth-child(8) {
-    background-image: url('../../images/stady-img/img_github.png');
+    // background-image: url('../../images/stady-img/img_github.png');
     transform: rotateY(280deg) translateZ(288px);
     animation-delay: -10s;
 }
 .stady__card:nth-child(9) {
-    background-image: url('../../images/stady-img/mg_sass.png');
+    // background-image: url('../../images/stady-img/mg_sass.png');
     transform: rotateY(320deg) translateZ(288px);
     animation-delay: -5s;
 }
@@ -194,4 +195,8 @@ background-image: url('../../images/stady-img/img_react.png');
         z-index: 10;
         opacity: 1;
     }
+}
+
+.stady__img {
+    width: 100px;
 }
