--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,3 +3,5 @@
 @import './components/hero';
 @import './components/aboutMe';
 @import './components/stady';
+@import './components/portfolio';
+@import './components/footer';
