--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,10 @@ body {
   background-color: #FF3F81;
 }
 
+.section-stady {
+  padding: 28px 0;
+}
+
 .stady__box {
   position: relative;
   width: 210px;
@@ -335,52 +339,81 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: effectСarousel 45s linear infinite;
+  animation: effectСarousel 70s linear infinite;
 }
 
 .stady__card:nth-child(1) {
-  transform: rotateY(0deg) translateZ(288px);
-  animation-delay: -45s;
+  transform: rotateY(0deg) translateZ(489px);
+  animation-delay: -70s;
 }
 
 .stady__card:nth-child(2) {
-  transform: rotateY(40deg) translateZ(288px);
-  animation-delay: -40s;
+  transform: rotateY(40deg) translateZ(489px);
+  animation-delay: -65s;
 }
 
 .stady__card:nth-child(3) {
-  transform: rotateY(80deg) translateZ(288px);
-  animation-delay: -35s;
+  transform: rotateY(80deg) translateZ(489px);
+  animation-delay: -60s;
 }
 
 .stady__card:nth-child(4) {
-  transform: rotateY(120deg) translateZ(288px);
-  animation-delay: -30s;
+  transform: rotateY(120deg) translateZ(489px);
+  animation-delay: -55s;
 }
 
 .stady__card:nth-child(5) {
-  transform: rotateY(160deg) translateZ(288px);
-  animation-delay: -25s;
+  transform: rotateY(160deg) translateZ(489px);
+  animation-delay: -50s;
 }
 
 .stady__card:nth-child(6) {
-  transform: rotateY(200deg) translateZ(288px);
-  animation-delay: -20s;
+  transform: rotateY(200deg) translateZ(489px);
+  animation-delay: -45s;
 }
 
 .stady__card:nth-child(7) {
-  transform: rotateY(240deg) translateZ(288px);
-  animation-delay: -15s;
+  transform: rotateY(240deg) translateZ(489px);
+  animation-delay: -40s;
 }
 
 .stady__card:nth-child(8) {
-  transform: rotateY(280deg) translateZ(288px);
-  animation-delay: -10s;
+  transform: rotateY(280deg) translateZ(489px);
+  animation-delay: -35s;
 }
 
 .stady__card:nth-child(9) {
-  transform: rotateY(320deg) translateZ(288px);
+  transform: rotateY(320deg) translateZ(489px);
+  animation-delay: -30s;
+}
+
+.stady__card:nth-child(10) {
+  transform: rotateY(320deg) translateZ(489px);
+  animation-delay: -25s;
+}
+
+.stady__card:nth-child(11) {
+  transform: rotateY(320deg) translateZ(489px);
+  animation-delay: -20s;
+}
+
+.stady__card:nth-child(12) {
+  transform: rotateY(320deg) translateZ(489px);
+  animation-delay: -15s;
+}
+
+.stady__card:nth-child(13) {
+  transform: rotateY(320deg) translateZ(489px);
+  animation-delay: -10s;
+}
+
+.stady__card:nth-child(14) {
+  transform: rotateY(320deg) translateZ(489px);
   animation-delay: -5s;
+}
+
+.stady__card:nth-child(15) {
+  transform: rotateY(320deg) translateZ(489px);
 }
 
 @keyframes rotate360 {
@@ -410,5 +443,134 @@ body {
 
 .stady__img {
   width: 100px;
+}
+
+.portfolio-section {
+  padding: 28px 0;
+}
+
+.portfolio__item {
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 20px 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.portfolio__item:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.portfolio__box {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.portfolio__min-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.portfolio__tumb-img {
+  width: 50%;
+  margin-right: 15px;
+}
+
+.portfolio__img {
+  width: 100%;
+  overflow: hidden;
+}
+
+.portfolio__max-info {
+  display: none;
+}
+
+.portfolio__max-info.active {
+  display: block;
+}
+
+.portfolio__button {
+  position: relative;
+  margin-top: auto;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  padding: 10px 5px;
+}
+
+.portfolio__button:hover {
+  color: #FF3F81;
+  cursor: pointer;
+}
+
+.arrow {
+  position: absolute;
+  bottom: -5px;
+  left: calc(50% - 10px);
+  display: block;
+  width: 20px;
+  animation: arrowDown 2s infinite;
+}
+
+.arrow.two {
+  opacity: 0;
+  animation-delay: 1s;
+}
+
+@keyframes arrowDown {
+  0% {
+    bottom: -5px;
+    opacity: 1;
+  }
+  100% {
+    bottom: -20px;
+    opacity: 0;
+  }
+}
+
+.container.footer {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.page-footer {
+  background-color: #23153C;
+  color: #FFFFFF;
+  padding: 28px 0;
+}
+
+.page-footer__title {
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.page-footer__text {
+  margin-bottom: 10px;
+  letter-spacing: 1.6;
+  font-size: 14px;
+}
+
+.social-list {
+  display: flex;
+}
+
+.social-item:not(:last-child) {
+  margin-right: 18px;
+}
+
+.social-item__link {
+  color: inherit;
+}
+
+.social-item__icon {
+  fill: #FFFFFF;
+  cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-item__icon:hover {
+  fill: #FF3F81;
 }
 /*# sourceMappingURL=main.css.map */
