--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -28,6 +28,10 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+
+    &:nth-last-child(-n+2) {
+       align-items: center;
+    }
 }
 
 .portfolio__tumb-img {
@@ -69,8 +73,10 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     }
 }
 
+
+
 .arrow {
-    position: absolute;
+// position: absolute;
 bottom: -5px;
 left: calc(50% - 10px);
 
