--- a/css/main.css
+++ b/css/main.css
@@ -153,11 +153,13 @@ body {
   margin-right: 25px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #FFFFFF;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav__item:hover, .site-nav__item:focus {
   color: #FF3F81;
   cursor: pointer;
+  transform: scale(1.2);
 }
 
 .burger {
@@ -275,8 +277,40 @@ body {
   }
 }
 
+@keyframes swing {
+  15% {
+    transform: translateX(9px);
+  }
+  30% {
+    transform: translateX(-9px);
+  }
+  40% {
+    transform: translateX(6px);
+  }
+  50% {
+    transform: translateX(-6px);
+  }
+  65% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.hero__link {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+}
+
 .hero__link:not(:last-child) {
-  margin-right: 18px;
+  margin-right: 25px;
+}
+
+.hero__link:hover {
+  animation: swing 0.6s ease;
+  animation-iteration-count: 1;
 }
 
 .aboutMe {
@@ -454,6 +488,7 @@ body {
   margin-bottom: 15px;
   padding: 20px 10px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__item:hover {
@@ -468,6 +503,7 @@ body {
 }
 
 .portfolio__min-info {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -475,6 +511,16 @@ body {
 
 .portfolio__min-info:nth-last-child(-n+2) {
   align-items: center;
+}
+
+.portfolio__status {
+  position: absolute;
+  top: -20px;
+  right: -10px;
+  padding: 5px 10px;
+  color: #FFFFFF;
+  background-color: #FF3F81;
+  opacity: 0.8;
 }
 
 .portfolio__tumb-img {
@@ -500,22 +546,27 @@ body {
 }
 
 .portfolio__button {
-  position: relative;
   display: block;
+  width: 80px;
   margin-top: auto;
+  margin-bottom: 15px;
   border: none;
+  background-color: transparent;
   text-align: center;
-  padding: 10px 5px;
+  padding: 5px 15px;
   color: rgba(35, 21, 60, 0.9);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__button:hover {
   color: #FF3F81;
   cursor: pointer;
+  transform: scale(1.2);
 }
 
 .arrow {
-  bottom: -5px;
+  position: absolute;
+  bottom: 0;
   left: calc(50% - 10px);
   display: block;
   width: 20px;
@@ -529,11 +580,11 @@ body {
 
 @keyframes arrowDown {
   0% {
-    bottom: -5px;
+    bottom: 0;
     opacity: 1;
   }
   100% {
-    bottom: -20px;
+    bottom: -10px;
     opacity: 0;
   }
 }
