--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -30,11 +30,13 @@
   margin-right: 25px;
   transition: $timing-function;
   color: $color-white;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     color: $color-pink;
     cursor: pointer;
+    transform: scale(1.2);
   }
 }
 
