--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -11,6 +11,7 @@
   padding: 20px 10px;
 
 box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 &:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -25,6 +26,7 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .portfolio__min-info {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -32,6 +34,17 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     &:nth-last-child(-n+2) {
        align-items: center;
     }
+}
+
+.portfolio__status {
+    position: absolute;
+    top: -20px;
+    right: -10px;
+    padding: 5px 10px;
+
+    color: $color-white;
+    background-color: $color-pink;
+    opacity: 0.8;
 }
 
 .portfolio__tumb-img {
@@ -57,27 +70,29 @@ box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .portfolio__button{
-    position: relative;
+    // position: relative;
     display: block;
+    width: 80px;
     margin-top: auto;
+    margin-bottom: 15px;
     border: none;
-    // background-color: transparent;
+    background-color: transparent;
     text-align: center;
-    padding: 10px 5px;
+    padding: 5px 15px;
 
     color: $color-dark-transparent;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover {
-        color: $color-pink;
-        cursor: pointer;
-    }
+         &:hover {
+             color: $color-pink;
+             cursor: pointer;
+            transform: scale(1.2);
+         }
 }
 
-
-
 .arrow {
-// position: absolute;
-bottom: -5px;
+position: absolute;
+bottom: 0;
 left: calc(50% - 10px);
 
     display: block;
@@ -94,11 +109,11 @@ left: calc(50% - 10px);
 
 @keyframes arrowDown {
     0% {
-        bottom: -5px;
+        bottom: 0;
         opacity: 1;
     }
     100% {
-        bottom: -20px;
+        bottom: -10px;
         opacity: 0;
     }
 }
