--- a/css/main.css
+++ b/css/main.css
@@ -319,10 +319,13 @@ body {
 
 .aboutMe__box {
   display: flex;
+  flex-direction: column;
 }
 
 .aboutMe__picture {
-  margin-right: 40px;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 40px;
 }
 
 .aboutMe__text {
@@ -364,6 +367,11 @@ body {
   transform-style: preserve-3d;
 }
 
+.card__box {
+  display: flex;
+  height: 150px;
+}
+
 .stady__card {
   position: absolute;
   top: 20px;
@@ -371,6 +379,7 @@ body {
   width: 190px;
   height: 120px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   animation: effectСarousel 70s linear infinite;
@@ -477,6 +486,17 @@ body {
 
 .stady__img {
   width: 100px;
+  object-fit: contain;
+}
+
+.stady__img-shadow {
+  display: block;
+  width: 30%;
+  height: 5px;
+  margin-top: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 .portfolio-section {
@@ -509,7 +529,7 @@ body {
   align-items: flex-start;
 }
 
-.portfolio__min-info:nth-last-child(-n+2) {
+.portfolio__min-info:nth-last-child(-n + 2) {
   align-items: center;
 }
 
@@ -523,9 +543,42 @@ body {
   opacity: 0.8;
 }
 
-.portfolio__tumb-img {
-  width: 50%;
+.portfolio__link {
+  position: relative;
+  width: 380px;
+  opacity: 1;
   margin-right: 15px;
+  overflow: hidden;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__link:hover {
+  transform: scale(1.01);
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+}
+
+.portfolio__link-play {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-image: url("../../images/icon/external-link.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio__link:hover .portfolio__link-play {
+  transform: translateY(0);
 }
 
 .portfolio__img {
