--- a/sass/components/_aboutMe.scss
+++ b/sass/components/_aboutMe.scss
@@ -4,10 +4,13 @@
 
 .aboutMe__box {
   display: flex;
+  flex-direction: column;
 }
 
 .aboutMe__picture {
-  margin-right: 40px;
+  width: 100%;
+  height: 200px;
+  margin-bottom: 40px;
 }
 
 .aboutMe__text {
