--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -2,20 +2,18 @@
   padding: 28px 0;
 }
 
-
-
 .portfolio__item {
   width: 100%;
   margin-bottom: 15px;
 
   padding: 20px 10px;
 
-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-&:hover {
+  &:hover {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
+  }
 }
 
 .portfolio__box {
@@ -26,30 +24,72 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__min-info {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 
-    &:nth-last-child(-n+2) {
-       align-items: center;
-    }
+  &:nth-last-child(-n + 2) {
+    align-items: center;
+  }
 }
 
 .portfolio__status {
-    position: absolute;
-    top: -20px;
-    right: -10px;
-    padding: 5px 10px;
+  position: absolute;
+  top: -20px;
+  right: -10px;
+  padding: 5px 10px;
 
-    color: $color-white;
-    background-color: $color-pink;
-    opacity: 0.8;
+  color: $color-white;
+  background-color: $color-pink;
+  opacity: 0.8;
 }
 
-.portfolio__tumb-img {
-  width: 50%;
+// .portfolio__tumb-img {
+//   width: 50%;
+//
+// }
+
+.portfolio__link {
+  position: relative;
+  width: 380px;
+  opacity: 1;
   margin-right: 15px;
+  overflow: hidden;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    transform: scale(1.01);
+    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+    // opacity: 0.5;
+  }
+}
+
+.portfolio__link-play {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  background-image: url('../../images/icon/external-link.svg');
+background-repeat: no-repeat;
+background-position: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio__link:hover .portfolio__link-play {
+  transform: translateY(0);
 }
 
 .portfolio__img {
@@ -58,62 +98,61 @@ transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio__max-info {
-    display: none;
+  display: none;
 }
 
 .portfolio__max-info.active {
-    display: block;
+  display: block;
 }
 
 .warning {
-    color: red;
+  color: red;
 }
 
-.portfolio__button{
-    // position: relative;
-    display: block;
-    width: 80px;
-    margin-top: auto;
-    margin-bottom: 15px;
-    border: none;
-    background-color: transparent;
-    text-align: center;
-    padding: 5px 15px;
+.portfolio__button {
+  // position: relative;
+  display: block;
+  width: 80px;
+  margin-top: auto;
+  margin-bottom: 15px;
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  padding: 5px 15px;
 
-    color: $color-dark-transparent;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: $color-dark-transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-         &:hover {
-             color: $color-pink;
-             cursor: pointer;
-            transform: scale(1.2);
-         }
+  &:hover {
+    color: $color-pink;
+    cursor: pointer;
+    transform: scale(1.2);
+  }
 }
 
 .arrow {
-position: absolute;
-bottom: 0;
-left: calc(50% - 10px);
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 10px);
 
-    display: block;
-    width: 20px;
+  display: block;
+  width: 20px;
 
-    animation: arrowDown 2s infinite;
+  animation: arrowDown 2s infinite;
 
-    &.two{
-        opacity: 0;
-        animation-delay: 1s;
-    }
-   
+  &.two {
+    opacity: 0;
+    animation-delay: 1s;
+  }
 }
 
 @keyframes arrowDown {
-    0% {
-        bottom: 0;
-        opacity: 1;
-    }
-    100% {
-        bottom: -10px;
-        opacity: 0;
-    }
+  0% {
+    bottom: 0;
+    opacity: 1;
+  }
+  100% {
+    bottom: -10px;
+    opacity: 0;
+  }
 }
