--- a/sass/components/_stady.scss
+++ b/sass/components/_stady.scss
@@ -19,6 +19,11 @@
   // animation: rotate360 60s linear infinite;
 }
 
+.card__box {
+    display: flex;
+    height: 150px;
+}
+
 .stady__card {
   position: absolute;
   top: 20px;
@@ -28,6 +33,7 @@
   height: 120px;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
@@ -125,4 +131,19 @@ animation-delay: -40s;
 
 .stady__img {
   width: 100px;
+object-fit: contain;
+// box-shadow: 0px 50px 15px -20px rgba(0, 0, 0, 0.35)
 }
+
+.stady__img-shadow {
+display: block;
+
+    width: 30%;
+    height: 5px;
+    margin-top: 10px;
+
+background-color: rgba(0, 0, 0, 0.10);
+border-radius: 50%;
+box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.10);
+}
+
