--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -97,6 +97,12 @@ background-position: center;
   overflow: hidden;
 }
 
+.portfolio__description {
+    &-active{
+        font-weight: bold;
+    }
+}
+
 .portfolio__max-info {
   display: none;
 }
