--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -23,6 +23,19 @@
   justify-content: center;
 }
 
+.portfolio__tumb-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 300px;
+}
+
+.portfolio__img {
+    object-fit: contain;
+    width: 100%;
+}
+
 .portfolio__min-info {
   position: relative;
   display: flex;
@@ -45,10 +58,11 @@
   opacity: 0.8;
 }
 
-// .portfolio__tumb-img {
-//   width: 50%;
-//
-// }
+
+
+.portfolio__title {
+    text-transform: uppercase;
+}
 
 .portfolio__link {
   position: relative;
