--- a/css/main.css
+++ b/css/main.css
@@ -321,7 +321,7 @@ body {
 
 .aboutMe {
   padding: 120px 0;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.01), white 85%), radial-gradient(ellipse at top left, rgba(214, 51, 132, 0.5), transparent 50%), radial-gradient(ellipse at top right, rgba(255, 228, 132, 0.5), transparent 50%), radial-gradient(ellipse at center right, rgba(255, 228, 132, 0.5), transparent 50%), radial-gradient(ellipse at center left, rgba(13, 110, 253, 0.5), transparent 50%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0.01), white 85%), radial-gradient(ellipse at top left, rgba(214, 51, 132, 0.5), transparent 50%), radial-gradient(ellipse at top right, rgba(13, 110, 253, 0.5), transparent 50%), radial-gradient(ellipse at center right, rgba(13, 110, 253, 0.5), transparent 50%), radial-gradient(ellipse at center left, rgba(255, 228, 132, 0.5), transparent 50%);
 }
 
 .aboutMe__box {
@@ -331,9 +331,9 @@ body {
 
 .aboutMe__picture {
   width: 100%;
-  height: 200px;
   margin-bottom: 40px;
-  object-fit: cover;
+  object-fit: contain;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .aboutMe__text {
@@ -578,6 +578,7 @@ body {
 
 .portfolio__title {
   text-transform: uppercase;
+  margin-bottom: 14px;
 }
 
 .portfolio__link {
