--- a/sass/components/_aboutMe.scss
+++ b/sass/components/_aboutMe.scss
@@ -13,20 +13,21 @@
     ),
     radial-gradient(
       ellipse at top right,
-      rgba(255, 228, 132, 0.5),
+      rgba(13, 110, 253, 0.5),
       transparent 50%
     ),
     radial-gradient(
       ellipse at center right,
-      rgba(255, 228, 132, 0.5),
+      rgba(13, 110, 253, 0.5),
       transparent 50%
     ),
     radial-gradient(
       ellipse at center left,
-      rgba(13, 110, 253, 0.5),
+      rgba(255, 228, 132, 0.5),
       transparent 50%
     );
 }
+// rgba(255, 228, 132, 0.5)
 
 .aboutMe__box {
   display: flex;
@@ -35,9 +36,11 @@
 
 .aboutMe__picture {
   width: 100%;
-  height: 200px;
+  // height: 200px;
   margin-bottom: 40px;
-  object-fit: cover;
+  object-fit: contain;
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .aboutMe__text {
