--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -62,6 +62,8 @@ object-fit: scale-down;
 
 .portfolio__title {
     text-transform: uppercase;
+
+    margin-bottom: 14px;
 }
 
 .portfolio__link {
