--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,17 @@ body {
   overflow: hidden;
 }
 
+.animation-show {
+  transform: translate(0px, 140%);
+  opacity: 0;
+  transition: all 0.8s ease 0s;
+}
+
+.animation-show.active-show {
+  transform: translate(0px, 0px);
+  opacity: 1;
+}
+
 .page-header {
   position: fixed;
   z-index: 100;
